# Aster

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO.txt
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
Source/: CMakeLists.txt  Input.cpp  Input.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
Test/: CMakeLists.txt  Main.cpp
Test/Assets/: Fragment.glsl  Vertex.glsl
